--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
 }
 
 header {
+  display: flex;
+  height: 50px;
   margin-bottom: 30px;
   background-color: black;
 }
@@ -36,6 +38,12 @@ header {
 #contents {
   margin: 20px;
   display: flex;
+}
+
+#headerIcon {
+  width: 40px;
+  height: 40px;
+  margin: 5px 20px;
 }
 
 h1 {
