デザインなどの微調整

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
 }
 
 header {
@@ -36,7 +37,7 @@ header {
 }
 
 #contents {
-  margin: 20px;
+  margin: 30px;
   display: flex;
 }
 
@@ -60,7 +61,7 @@ h1 {
 }*/
 
 #conditions {
-  width: 65%;
+  width: 60%;
   margin-right: 30px;
 }
 
@@ -90,6 +91,10 @@ h1 {
 
 .read-the-docs {
   color: #888;
+}
+
+.numberSpace {
+  width: 70px;
 }
 
 .btnContainer {
@@ -142,6 +147,16 @@ button:focus-visible {
   transform: scale(1.01);
 }
 
+/*#result {
+  margin: 0 auto;
+}*/
+
+.resultTable {
+  padding: 10px; 
+  background-color: #e6eaed;
+  border-radius: 8px;
+}
+
 .table {
   width: 80px; 
   height: 80px; 
@@ -150,6 +165,7 @@ button:focus-visible {
   line-height: 80px;
   text-align: center;
   margin: 1.5px;
+  background-color: white;
   transition: 0.5s;
 }
 
@@ -166,12 +182,17 @@ button:focus-visible {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 690px) {
   #contents {
     display: block;
   }
 
   #conditions {
     width: 100%;
+  }
+
+  .resultTable {
+    display: inline-block;
+    margin-top: 20px;
   }
 }
