--- a/style.css
+++ b/style.css
@@ -152,26 +152,29 @@ button:focus-visible {
 }*/
 
 .resultTable {
-  padding: 10px 10px 10px 4px; 
+  
+  padding: 10px; 
   background-color: #e6eaed;
   border-radius: 8px;
 }
 
 .seatNumber {
+  width: 100%;
   position: relative;
   top: -28px;
-  left: 17px;
+  left: 0px;
   color: #a3a5a5;
+  z-index: 1;
 }
 
 .table {
-  width: 80px; 
-  height: 80px; 
+  width: 100px; 
+  height: 100px; 
   border: 1.5px solid black; 
   display: inline-block;
   line-height: 80px;
   text-align: center;
-  margin: 1.5px 1.5px 1.5px 0;
+  margin: 1.5px;
   background-color: white;
   transition: 0.5s;
 }
@@ -189,7 +192,7 @@ button:focus-visible {
   }
 }
 
-@media (max-width: 690px) {
+@media (max-width: 730px) {
   #contents {
     display: block;
   }
