--- a/style.css
+++ b/style.css
@@ -159,12 +159,8 @@ button:focus-visible {
 }
 
 .seatNumber {
-  width: 100%;
   position: relative;
-  top: -28px;
-  left: 0px;
   color: #a3a5a5;
-  z-index: 1;
 }
 
 .table {
@@ -172,11 +168,15 @@ button:focus-visible {
   height: 100px; 
   border: 1.5px solid black; 
   display: inline-block;
-  line-height: 80px;
-  text-align: center;
   margin: 1.5px;
+  padding: 2px;
   background-color: white;
-  transition: 0.5s;
+}
+
+.tableName {
+  position: relative;
+  top: 40%;
+  left: 10%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -192,7 +192,7 @@ button:focus-visible {
   }
 }
 
-@media (max-width: 730px) {
+@media (max-width: 750px) {
   #contents {
     display: block;
   }
